--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -172,7 +172,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="./FigureCrush.apk"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -189,7 +189,7 @@ gradle_build/use_gradle_build=true
 gradle_build/gradle_build_directory=""
 gradle_build/android_source_template=""
 gradle_build/compress_native_libraries=false
-gradle_build/export_format=1
+gradle_build/export_format=0
 gradle_build/min_sdk="24"
 gradle_build/target_sdk="36"
 gradle_build/custom_theme_attributes={}
